# authored-pack

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IP_OWNERSHIP_NOTICE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.control/: lane.json
.github/workflows/: ci.yml
assets/: godel_words.txt
authored_pack/: __init__.py  __main__.py  binmode.py  cli.py  manifest.py  pack.py  safeio.py
authored_pack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: CANONICAL_DEMO.md  CHATGPT_PRO_REDTEAM_ENTROPY_DOSSIER.md  CLEAR_DECK_PLAN.md  CROSS_AGENT_CONTROL_PLANE_PROMPT.md  DEVLOG.md  PUBLIC_COPY_ASSETS.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.2.4.md  RELEASE_NOTES_v1.0.0.md  SEALED_PACK_ARCHITECTURE.md  authored_pack_plan_2026-03-30.md  claude_final_first_time_developer_review_2026-04-11.md  claude_first_time_developer_review_2026-04-11.md  dev_architect_handoff_2026-04-09.md  execution_log.md  repo_architect_handoff_2026-03-30.md
eps/: __init__.py  __main__.py  binmode.py  cli.py  hkdf.py  manifest.py  pack.py  safeio.py
scripts/: close_release_contract.py  demo_v1.sh  release_check.sh  smoke_install.sh  smoke_tui_pty.py
tests/: conftest.py  test_cli_binmode_guards.py  test_cli_contract.py  test_hkdf.py  test_pack_hardening.py  test_public_release_contract.py  test_safeio.py  test_stamp_bin.py  test_stamp_verify.py  test_tui_audit_quick_wins.py  test_tui_experience_contract.py  test_tui_header_contract.py  test_tui_lockdown_guards.py  test_tui_p1_regressions.py
(+6 files in other folders)
