[project]
name = "entropy-pack-stamper"
version = "1.0.0"
description = "Deterministic pack/verify tool for operator-supplied entropy-bearing inputs."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aaron Day" }]
requires-python = ">=3.11"

[project.scripts]
eps = "eps.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
norecursedirs = ["out", ".git", ".venv", "dist", "build"]
