[project]
name = "entropy-pack-stamper"
version = "1.0.0"
description = "Authored Pack is a deterministic pack/verify tool for humans and agents."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aaron Day" }]
requires-python = ">=3.11"

[project.scripts]
authored-pack = "eps.cli:main"
eps = "eps.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
norecursedirs = ["out", ".git", ".venv", "dist", "build"]
